--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </div>
           <div class="col-md-8">
             <div class="card-body">
-              <h5 class="card-title">Hunder Captain</h5>
+              <h5 class="card-title">Hunger Captain</h5>
               <p class="card-text"><strong>Project Description:</strong>This is an online food menu service for Tasty Tater. These days, when you visit a restaurant, you often use the QR code to load the PDF of the menu. It has no image and is not easy to select items. So we created the menu app where you can see food images with the needed information and select your items easily. During such unprecedented time and social distancing, online menu card technology is a boon!
                 <br> <br> <strong>Technologies Used:</strong> Html, CSS, Bootstrap, Javascript / JQuery, Django, Cloudinary (To host uploaded images on CDN), Heroku.
               </p>
